# mug

./: Cargo.toml  README.md  rustfmt.toml
src/: alpm.rs  aur.rs  config.rs  error.rs  main.rs
src/cmd/: download.rs  info.rs  list.rs  mod.rs  search.rs
