[package]
name = "mug"
version = "0.1.0"
authors = ["Isac Sund <isac@isacsund.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
raur = "5.0.0"
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.3.0", features = ["macros", "rt-multi-thread"] }
