[package]
name = "mug"
version = "0.1.0"
authors = ["Isac Sund <isac@isacsund.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
reqwest = { version = "0.11.0", features = ["json"] }
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
tokio = { version = "1.3.0", features = ["macros", "rt-multi-thread"] }
url = "2.1.1"
