[package]
name = "mug"
version = "0.1.0"
authors = ["Isac Sund <isac@isacsund.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "1.1.8"
aur-fetch = "0.9.1"
clap = "3.0.0-beta.2"
dirs = "3.0.1"
raur = "5.0.0"
serde = "1.0.124"
serde_derive = "1.0.124"
tokio = { version = "1.3.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.8"
url = { version = "2.1.1", features = ["serde"] }
